update_manifest_browser_action

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,9 @@
   "name": "Hello Extension",
   "description": "Base Level Extension",
   "version": "1.0",
-  "manifest_version": 2
+  "manifest_version": 2,
+  "browser_action": {
+    "default_popup": "hello_extension.html",
+    "default_icon": "hello_extension.png"
+  }
 }
