--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,14 @@
   "browser_action": {
     "default_popup": "hello_extension.html",
     "default_icon": "hello_extension.png"
+  },
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
+      },
+      "description": "Open hello_extension.html"
+    }
   }
 }
